--- a/config/base.cfg
+++ b/config/base.cfg
@@ -348,24 +348,35 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
+# logic = coldestCore # cfg:coldestCore
 epoch = 1000000
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
-logic = maxFreq  # cfg:maxFreq
+#logic = maxFreq  # cfg:maxFreq
+
+logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
+logic = ondemand # cfg:ondemand
+
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
-max_frequency = 2.0  # cfg:2.0GHz
+#max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 3.0  # cfg:3.0GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
-dvfs_epoch = 1000000 # cfg:slowDVFS
+#dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
-#dvfs_epoch = 100000  # cfg:fastDVFS
+dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
+
+[scheduler/open/dvfs/ondemand]
+up_threshold = 0.3
+down_threshold = 0.2
+dtm_cricital_temperature = 80
+dtm_recovered_temperature = 75
 
 [scheduler/open/dvfs/fixed_power]
 per_core_power_budget = 1  # in Watt
