--- a/config/base.cfg
+++ b/config/base.cfg
@@ -337,6 +337,9 @@ queuePolicy = FIFO	#Set the queuing policy. Currently support: FIFO, priority.
 distribution = poisson #Set the arrival distribution of open workload. Currently supported: uniform, poisson, explicit
 distributionSeed = 815 #Set the seed for the random distribution (for repeatability). Use 0 to generate a seed.
 arrivalRate = 1	#Set the rate at which tasks arrive together.
+#arrivalRate = 2 # cfg:2arrivals
+#arrivalRate = 3 # cfg:3arrivals
+#arrivalRate = 4 # cfg:4arrivals
 arrivalInterval = 10000000 #Set the (expected) interval between two arrivals in nano seconds. 
 explicitArrivalTimes=0,0,0,0
 core_mask = 1             # Mask of cores on which threads can be scheduled (default: 1, all cores)
@@ -354,16 +357,18 @@ epoch = 1000000
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
 logic = maxFreq  # cfg:maxFreq
-
-logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
+#logic = asymmetric # cfg:asymmetric
 #logic = ondemand # cfg:ondemand
+
+asymmetry = master
+#asymmetry = slave # cfg:asymmetry-slave
 
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
-max_frequency = 1.0  # cfg:1.0GHz
+#max_frequency = 1.0  # cfg:1.0GHz
 #max_frequency = 2.0  # cfg:2.0GHz
-#max_frequency = 3.0  # cfg:3.0GHz
+max_frequency = 3.0  # cfg:3.0GHz
 #max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
