Added final version of the migration policy.

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -351,7 +351,7 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
-# logic = coldestCore # cfg:coldestCore
+logic = coldestCore # cfg:coldestCore
 epoch = 1000000
 
 [scheduler/open/dvfs]
@@ -440,3 +440,7 @@ enabled = false
 reliability_executable = reliability/reliability_external
 sum_file = sums.txt
 acceleration_factor = 21600000000  # accel. delta_t from 1 ms -> 250 days
+
+
+[scheduler/open/migration/coldestCore]
+criticalTemperature = 80
