--- a/config/base.cfg
+++ b/config/base.cfg
@@ -373,9 +373,9 @@ max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
-dvfs_epoch = 1000000 # cfg:slowDVFS
+#dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
-#dvfs_epoch = 100000  # cfg:fastDVFS
+dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
 
 [scheduler/open/dvfs/ondemand]
