--- a/test/config/base.cfg
+++ b/test/config/base.cfg
@@ -354,6 +354,7 @@ epoch = 1000000
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
 #logic = maxFreq  # cfg:maxFreq
+#logic = funky # cfg:funky
 
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
 logic = ondemand # cfg:ondemand
