--- a/config/base.cfg
+++ b/config/base.cfg
@@ -361,6 +361,7 @@ logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), 
 #logic = maxFreq  # cfg:maxFreq
 #logic = asymmetric # cfg:asymmetric
 #logic = ondemand # cfg:ondemand
+logic = funky # cfg:funky
 
 asymmetry = master
 #asymmetry = slave # cfg:asymmetrySlave
@@ -368,10 +369,10 @@ asymmetry = master
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
-max_frequency = 1.0  # cfg:1.0GHz
+#max_frequency = 1.0  # cfg:1.0GHz
 #max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 3.0  # cfg:3.0GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
 dvfs_epoch = 1000000 # cfg:slowDVFS
@@ -448,4 +449,4 @@ acceleration_factor = 21600000000  # accel. delta_t from 1 ms -> 250 days
 criticalTemperature = 80
 
 [scheduler/open/migration/funky]
-criticalTemperature = 120
+criticalTemperature = 70
