--- a/config/base.cfg
+++ b/config/base.cfg
@@ -332,7 +332,8 @@ type = open
 
 [scheduler/open]
 logic = first_unused #Set the scheduling algorithm used. Currently supported: first_unused.
- logic = funky # cfg:funky
+#logic = funky # cfg:funky
+logic = cranky # cfg:cranky
 epoch = 10000000	#Set the scheduling epoch in ns; granularity at which open scheduler is called.
 queuePolicy = FIFO	#Set the queuing policy. Currently support: FIFO, priority.
 distribution = poisson #Set the arrival distribution of open workload. Currently supported: uniform, poisson, explicit
@@ -353,15 +354,17 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
 #logic = coldestCore # cfg:coldestCore
-logic = funky # cfg:funky
+#logic = funky # cfg:funky
+logic = cranky # cfg:cranky
 epoch = 1000000
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
-#logic = maxFreq  # cfg:maxFreq
+logic = maxFreq  # cfg:maxFreq
 #logic = asymmetric # cfg:asymmetric
 #logic = ondemand # cfg:ondemand
-logic = funky # cfg:funky
+#logic = funky # cfg:funky
+logic = cranky # cfg:cranky
 
 asymmetry = master
 #asymmetry = slave # cfg:asymmetrySlave
@@ -371,13 +374,13 @@ min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
 #max_frequency = 2.0  # cfg:2.0GHz
-max_frequency = 3.0  # cfg:3.0GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+#max_frequency = 3.0  # cfg:3.0GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
-dvfs_epoch = 1000000 # cfg:slowDVFS
+#dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
-#dvfs_epoch = 100000  # cfg:fastDVFS
+dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
 
 [scheduler/open/dvfs/ondemand]
@@ -450,3 +453,6 @@ criticalTemperature = 70
 
 [scheduler/open/migration/funky]
 criticalTemperature = 70
+
+[scheduler/open/migration/cranky]
+maxTemperature = 70
